added few new views and other things