@@ -2,6 +2,7 @@ package edu.trucktrack.service;
 
 import edu.trucktrack.entity.EmployeeEntity;
 import edu.trucktrack.repository.jpa.EmployeeJpaRepository;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
@@ -11,6 +12,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,9 +22,13 @@ public class SecurityService implements UserDetailsService {
 	private final EmployeeJpaRepository employeeJpaRepository;
 
 	@Override
-	public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-		EmployeeEntity employee = employeeJpaRepository.getByEmail(email);
-		return new User(employee.getEmail(), employee.getPassword(), employee.getRoles().stream().map(item -> new SimpleGrantedAuthority(item.getRole())).collect(
-				Collectors.toList()));
+	public UserDetails loadUserByUsername(String email) {
+		return Optional.ofNullable(employeeJpaRepository.getByEmail(email))
+				.map(this::buildUser)
+				.orElseThrow(() -> new EntityNotFoundException("Entity with email '%s' not found".formatted(email)));
+	}
+
+	private User buildUser(EmployeeEntity employee) {
+		return new User(employee.getEmail(), employee.getPassword(), employee.getRoles().stream().map(item -> new SimpleGrantedAuthority(item.getRole())).toList());
 	}
 }
